# rutube-transcriber

./: .gitignore  README.md  database.py  downloader.py  main.py  pyproject.toml  run.bat  setup.bat  transcriber.py  transcriptions.db  uninstall.bat
rutube_transcriber/: database.py  downloader.py  main.py
